2011-03-01 Jerome Pasquier  <rainbru@free.fr>

	* acinclude.m4 (RB_CHECK_PLSM2): Check implemenetd using 
	PKG_CHECK_MODULES.

2011-02-26 Jerome Pasquier  <rainbru@free.fr>

	* src/common/globaluri.cpp (installConfigFile): Switch a GTR string
	from _MID to _HUG to fix a memory issue.

	* configure.in: Checks for Boost.unit through m4/rb_boost_test.m4.
	* m4/rb_boost_test.rb: Check for Boost.Test library and header.

2011-02-19 Jerome Pasquier  <rainbru@free.fr>

	* src/maincore/inputmanager.cpp (initialise): uses OIS's
	getNumberOfDevices() function

2011-02-17 Jerome Pasquier  <rainbru@free.fr>

	* m4/rb_freetype.m4: Improved version check using float number
	and `bc`.

2011-01-29 Jerome Pasquier  <rainbru@free.fr>

	* src/testHelpers/DummyRenderSystem: Started implementation.

2011-01-23 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/WidgetListTest: Ported from CppUnit to Boost.Test.

2011-01-22 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/SerializableTest: Ported from CppUnit to Boost.Test.
	* src/ogreGui/FocusableTest: Ported from CppUnit to Boost.Test.
	* src/ogreGui/DrawableTestWithOgre: Ported from CppUnit to Boost.Test.

2011-01-20 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/DrawableTest: Ported from CppUnit to Boost.Test.
	* src/ogreGui/BrushTest: Ported from CppUnit to Boost.Test.

2011-01-08 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Makefile.am: individual-test-fontmanager target created.

2011-01-08 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Container.cpp (push_back): add a child set
	dirty flag to true.

	* src/ogreGui/ContainerTest.cpp: ported from CppUnit to
	Boost.Test.
	
	* src/maincore/WindowHandleTest.cpp: implemented.
	* src/testHelpers/OgreMinimalSetup (getRenderWindow) implemented.
	
	* src/maincore/WindowHandle.cpp (get): throws some 
	NullWindowHandleException.
	
	* src/maincore/NullWindowHandleException: header and implementation 
	added.
	