@@ -1,0 +1,3 @@
+# For GNU/Linux
+PluginFolder=/usr/lib/OGRE
+Plugin=RenderSystem_GL.so
