@@ -19,4 +19,5 @@
 
 datafilesdir = $(prefix)/share/RainbruRPG/media/materials/scripts
 datafiles_DATA= Example.material 		\
-		highlight.material
+		highlight.material              \
+		Examples.program
