@@ -1,0 +1,77 @@
+# This is a valgrind suppression file
+# generated with the --gen-suppressions=<yes option
+
+
+# --------------------------------------------------------
+# OgreMinimalSetup related stuff
+{
+   Ogre::glXCreateContextWithConfigSGIX
+   Memcheck:Param
+   ioctl(generic)
+   fun:ioctl
+   fun:drmIoctl
+   fun:drmCommandWriteRead
+   fun:radeon_cs_manager_gem_ctor
+   fun:rcommonInitCmdBuf
+   fun:r300CreateContext
+   obj:/usr/lib/dri/r300_dri.so
+   obj:/usr/lib/mesa/libGL.so.1.2
+   obj:/usr/lib/mesa/libGL.so.1.2
+   fun:glXCreateContextWithConfigSGIX
+   fun:_ZN4Ogre10GLXContextC1EPNS_12GLXGLSupportEP16__GLXFBConfigRecmP15__GLXcontextRec
+   fun:_ZN4Ogre9GLXWindow6createERKSsjjbPKSt3mapISsSsSt4lessISsESaISt4pairIS1_SsEEE
+}
+
+{
+   Ogre::glXMakeContextCurrent
+   Memcheck:Param
+   ioctl(generic)
+   fun:ioctl
+   fun:drmIoctl
+   fun:drmCommandWriteRead
+   obj:/lib/libdrm_radeon.so.1.0.0
+   fun:radeon_update_renderbuffers
+   fun:radeonMakeCurrent
+   obj:/usr/lib/dri/r300_dri.so
+   fun:glXMakeContextCurrent
+   fun:_ZN4Ogre9GLXWindow6createERKSsjjbPKSt3mapISsSsSt4lessISsESaISt4pairIS1_SsEEE
+   fun:_ZN4Ogre12GLXGLSupport9newWindowERKSsjjbPKSt3mapISsSsSt4lessISsESaISt4pairIS1_SsEEE
+   fun:_ZN4Ogre14GLRenderSystem19_createRenderWindowERKSsjjbPKSt3mapISsSsSt4lessISsESaISt4pairIS1_SsEEE
+   fun:_ZN16OgreMinimalSetup9setupOgreERKSs
+}
+
+{
+   Ogre::glXMakeContextCurrent2
+   Memcheck:Param
+   ioctl(generic)
+   fun:ioctl
+   fun:drmWaitVBlank
+   obj:/usr/lib/dri/r300_dri.so
+   fun:driDrawableInitVBlank
+   fun:radeonMakeCurrent
+   obj:/usr/lib/dri/r300_dri.so
+   fun:glXMakeContextCurrent
+   fun:_ZN4Ogre9GLXWindow6createERKSsjjbPKSt3mapISsSsSt4lessISsESaISt4pairIS1_SsEEE
+   fun:_ZN4Ogre12GLXGLSupport9newWindowERKSsjjbPKSt3mapISsSsSt4lessISsESaISt4pairIS1_SsEEE
+   fun:_ZN4Ogre14GLRenderSystem19_createRenderWindowERKSsjjbPKSt3mapISsSsSt4lessISsESaISt4pairIS1_SsEEE
+   fun:_ZN16OgreMinimalSetup9setupOgreERKSs
+   fun:main
+}
+
+{
+   Ogre::GLFBOManager
+   Memcheck:Param
+   ioctl(generic)
+   fun:ioctl
+   fun:drmIoctl
+   fun:drmCommandWriteRead
+   obj:/lib/libdrm_radeon.so.1.0.0
+   obj:/usr/lib/dri/r300_dri.so
+   obj:/usr/lib/dri/r300_dri.so
+   fun:_ZN4Ogre12GLFBOManager10_tryFormatEjj
+   fun:_ZN4Ogre12GLFBOManager16detectFBOFormatsEv
+   fun:_ZN4Ogre12GLFBOManagerC1Eb
+   fun:_ZN4Ogre14GLRenderSystem38initialiseFromRenderSystemCapabilitiesEPNS_24RenderSystemCapabilitiesEPNS_12RenderTargetE
+   fun:_ZN4Ogre14GLRenderSystem19_createRenderWindowERKSsjjbPKSt3mapISsSsSt4lessISsESaISt4pairIS1_SsEEE
+   fun:_ZN16OgreMinimalSetup9setupOgreERKSs
+}
